# chitra

./: .env.example  Cargo.toml  ReadMe.md
src/: db.rs  init.rs  main.rs
