[package]
name = "chitra"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["full"] }
tokio = { version = "1.39.2", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.205", features = ["derive"] }
dotenv = "0.15"
futures-util = "0.3.30"
eyre = "0.6.12"
reqwest = { version = "0.12.5",features = ["json"] }
serde_json = "1.0"

